bdr.BDR.scala.error
Compilation error:
BDR:5: error: unclosed character literal
  x='getIndication()';
                    ^BDR:5: error: ';' expected but something found.
  x='getIndication()';
                    ^